--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_login"
+    android:background="#008577"
     tools:context=".activities.LoginActivity"
     tools:ignore="VectorDrawableCompat">
 
@@ -50,40 +50,14 @@
         android:src="@drawable/circletransparant" />
         -->
 
-    <ImageView
-        android:id="@+id/circle2"
-        android:layout_width="134dp"
-        android:layout_height="134dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="-100dp"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/circletransparant" />
 
-    <ImageView
-        android:id="@+id/circle3"
-        android:layout_width="182dp"
-        android:layout_height="182dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="-80dp"
-        android:layout_marginBottom="-30dp"
-        android:src="@drawable/circle" />
-
-    <ImageView
-        android:id="@+id/circle4"
-        android:layout_width="134dp"
-        android:layout_height="134dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="-50dp"
-        android:layout_marginBottom="-50dp"
-        android:layout_toLeftOf="@+id/circle3"
-        android:src="@drawable/circletransparant" />
 
     <ScrollView
         android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/bgHeader">
+        android:layout_below="@+id/bgHeader"
+        android:layout_marginTop="2dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -100,8 +74,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
                     android:orientation="vertical"
-                    android:background="@drawable/background_login"
                     android:paddingBottom="50dp">
 
                     <TextView
@@ -109,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:text="Username"
-                        android:textColor="@color/colorPurple"
+                        android:textColor="#008577"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -117,7 +91,6 @@
                         android:id="@+id/userNameLogin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorWhite"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:inputType="text" />
@@ -127,14 +100,14 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:text="Password"
-                        android:textColor="@color/colorPurple"
+                        android:textColor="#008577"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <EditText
+                        android:id="@+id/userPasswordlogin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorWhite"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:inputType="textPassword" />
@@ -153,6 +126,7 @@
                 android:elevation="10dp">
 
                 <Button
+                    android:id="@+id/button_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_ui"
@@ -182,12 +156,12 @@
                 android:id="@+id/tvForgot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
                 android:layout_below="@+id/cv"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:elevation="5dp"
                 android:text="Forgot your password?"
+                android:textColor="@color/colorWhite"
                 android:textSize="14sp" />
 
             <!--  <Button
