--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="purple">#c86dd7</color>
     <color name="blackot">#090322</color>
     <color name="blackot1">#09091B</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
