--- a/app/src/main/res/drawable/circletransparant.xml
+++ b/app/src/main/res/drawable/circletransparant.xml
@@ -4,8 +4,8 @@
         <shape android:shape="oval">
             <gradient
                 android:angle="90"
-                android:endColor="@color/colorPurpleT"
-                android:startColor="@color/colorBlueT" />
+                android:endColor="@color/colorWhite"
+                android:startColor="#d67601" />
         </shape>
     </item>
 </layer-list>
