--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/bgHeader"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
 
         android:theme="@style/AppTheme"
         android:elevation="5dp" />
@@ -52,11 +52,27 @@
         -->
 
 
+
+    <Button
+        android:id="@+id/uploadButtonImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/tvSignUp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:background="#008577"
+        android:text="@string/upload_image"
+        android:visibility="gone"
+        />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/bgHeader"
-        android:layout_margin="20dp">
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        >
         <RelativeLayout
             android:id="@+id/rlayout"
             android:layout_width="match_parent"
@@ -95,6 +111,7 @@
                         android:inputType="textEmailAddress" />
 
                     <TextView
+                        android:id="@+id/usernameTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
