--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -64,7 +64,7 @@
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cv"
+                android:id="@+id/cv_work"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
@@ -117,9 +117,9 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cv"
-                android:layout_alignLeft="@+id/cv"
-                android:layout_alignRight="@+id/cv"
+                android:layout_below="@+id/cv_work"
+                android:layout_alignLeft="@+id/cv_work"
+                android:layout_alignRight="@+id/cv_work"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="-50dp"
                 android:layout_marginRight="35dp"
@@ -138,8 +138,8 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/cv"
-                android:layout_alignRight="@+id/cv"
+                android:layout_alignTop="@+id/cv_work"
+                android:layout_alignRight="@+id/cv_work"
                 android:layout_marginTop="-20dp"
                 android:layout_marginRight="-20dp"
                 android:elevation="10dp">
@@ -156,7 +156,7 @@
                 android:id="@+id/tvForgot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cv"
+                android:layout_below="@+id/cv_work"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:elevation="5dp"
