--- a/app/src/main/res/layout/activity_add__work_.xml
+++ b/app/src/main/res/layout/activity_add__work_.xml
@@ -23,24 +23,35 @@
         android:layout_marginTop="40dp"
         android:elevation="10dp"
         android:transitionName="tvLogin"
-        android:text="Sign up"
+        android:text="Add Work"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/uploadButtonImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/tvSignUp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:background="#008577"
+        android:text="@string/upload_image"
+        android:visibility="gone"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/bgHeader"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         >
         <RelativeLayout
             android:id="@+id/rlayoutwork"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_work"
@@ -60,15 +71,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Email"
+                        android:text="Title"
                         android:textColor="#008577"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/email_text"
+                        android:id="@+id/title_text"
                         android:layout_width="match_parent"
-
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
@@ -79,13 +89,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Username"
+                        android:text="Job Description"
                         android:textColor="#008577"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/username"
+                        android:id="@+id/jobDescriptionText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
@@ -95,7 +105,7 @@
 
 
                     <RadioGroup
-                        android:id="@+id/button_group_per_or_comp"
+                        android:id="@+id/position_group"
                         android:paddingBottom="10dp"
                         android:paddingTop="10dp"
                         android:layout_width="wrap_content"
@@ -103,58 +113,32 @@
                         android:paddingStart="10dp"
                         android:orientation="horizontal">
                         <RadioButton
-                            android:id="@+id/id_person"
+                            android:id="@+id/id_junior"
                             android:shadowColor="@color/colorWhite"
                             android:layout_width="wrap_content"
-                            android:text="Person"
+                            android:text="Junior"
                             android:textColor="#008577"
                             android:layout_height="wrap_content" />
                         <RadioButton
-                            android:id="@+id/id_company"
+                            android:id="@+id/id_middle"
                             android:layout_marginStart="40dp"
                             android:shadowColor="@color/colorWhite"
                             android:layout_width="wrap_content"
-                            android:text="Company"
+                            android:text="Middle"
+                            android:textColor="#008577"
+                            android:layout_height="wrap_content" />
+                        <RadioButton
+                            android:id="@+id/id_senior"
+                            android:shadowColor="@color/colorWhite"
+                            android:layout_width="wrap_content"
+                            android:text="Senior"
+                            android:layout_marginStart="40dp"
                             android:textColor="#008577"
                             android:layout_height="wrap_content" />
 
                     </RadioGroup>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="Password"
-                        android:textColor="#008577"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
 
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:inputType="textPassword" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="Confirm Password"
-                        android:textColor="#008577"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <EditText
-                        android:id="@+id/confirmPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:inputType="textPassword" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -170,11 +154,11 @@
                 android:elevation="10dp">
 
                 <Button
-                    android:id="@+id/buttonSingnup"
+                    android:id="@+id/button_addwork"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_ui"
-                    android:text="Sign up"
+                    android:text="Add Work"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite" />
             </RelativeLayout>
