--- a/app/src/main/res/layout/work_item.xml
+++ b/app/src/main/res/layout/work_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp"
     android:layout_margin="4dp"
@@ -12,11 +12,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/company_name"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textSize="16sp"
+           android:textColor="@color/colorBlack"
+            />
+
         <ImageView
+            android:src="@drawable/work_image"
             android:id="@+id/workImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="15dp"
+            android:layout_below="@id/company_name"
             android:padding="4dp"/>
         <TextView
             android:id="@+id/positionTextView"
@@ -26,6 +36,7 @@
             android:layout_marginStart="30dp"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/black"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@id/workImageView"
@@ -55,20 +66,7 @@
             android:textColor="@android:color/holo_red_light"
             android:layout_below="@id/companyTextView"
             android:layout_toEndOf="@id/workImageView"
-            android:layout_marginTop="8dp"
-            />
-        <TextView
-            android:id="@+id/locationTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Text 4"
-            android:layout_marginStart="30dp"
-            android:textSize="15sp"
-            android:textStyle="italic"
-            android:textColor="@android:color/black"
-            android:layout_below="@id/deadLineTextView"
-            android:layout_toEndOf="@id/workImageView"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             />
 
     </RelativeLayout>
