--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="blackot">#090322</color>
     <color name="blackot1">#09091B</color>
     <color name="colorRed">#FF0000</color>
+    <color name="colorGreen">#008577</color>
 </resources>
